replaced the depreciated async task.